Fix EC numbering, begin test cases from ECs

--- a/doc/functional-testing.tex
+++ b/doc/functional-testing.tex
@@ -55,7 +55,7 @@
 The input domain of the unit \texttt{nextDate} consists of dates formatted as follows: $DD/MM/YYYY$. For months, $MM$, the input condition specifies the range $[1, 12]$. If $MM = 2$ and the year is not a leap year, then the input condition range for dates, $DD$ is $[1, 28]$ (a year is a leap year if divisible by 4 and not divisible by 100 (unless divisible by 400)). If $MM = 2$  and the year is a leap year, then the input condition range for $DD$ is $[1, 29]$. If $MM = 4, 6, 9,$ or $11$, then the input condition range for $DD$ is $[1, 30]$. If $MM = 1, 3, 5, 7, 8, 10,$ or $12$, then the input condition range for $DD$ is $[1, 31]$.
 
 \section{Equivalence Classes}
-In order to identify equivalence classes (ECs), the following strategy was used: input conditions typically specified a range $[a, b]$, thus one EC was identified for $a \leq X \leq b$, and two others were identified for $X < a$ and $b < X$.
+In order to identify equivalence classes (ECs), the following strategy was used: input conditions typically specified a range $[a, b]$, thus one EC valid input was identified for $a \leq X \leq b$, and two others with invalid input were identified for $X < a$ and $b < X$.
 
 \subsection{Months}
 	\begin{itemize}
@@ -95,13 +95,23 @@ In order to identify equivalence classes (ECs), the following strategy was used:
 
 \subsection{Years}
 	\begin{itemize}
-		\item{EC-13: $1900 \leq YYYY \leq 2099$}
-		\item{EC-14: $YYYY < 1900$}
-		\item{EC-15: $2099 < YYYY$}
+		\item{EC-16: $1900 \leq YYYY \leq 2099$}
+		\item{EC-17: $YYYY < 1900$}
+		\item{EC-18: $2099 < YYYY$}
 	\end{itemize}
 
 \section{Test Cases}
 \subsection{Test Cases from Equivalence Classes}
+In order to identify test cases (TCs) from ECs, the following strategy is used: For each EC with valid input that has not been covered by a TC, write a TC covering as many uncovered ECs as possible. Then, for each EC with invalid input that has been covered, write a new TC that covers only that EC.
+
+\subsubsection{Test Cases for ECs with Valid Input}
+Valid Input ECs: EC-01, EC-04, EC-07, EC-10, EC-13, EC-16
+	
+
+\subsubsection{Test Cases for ECs with Invalid Input}
+Invalid Input ECs: EC-02, EC-03, EC-05, EC-06, EC-08, EC-09, EC-11, EC-12, EC-14 EC-15, EC-17, EC-18
+
+
 \subsection{Test Cases for Boundary Value Analysis}
 \subsection{Test Cases for Random Testing}
 
