--- a/doc/functional-testing.tex
+++ b/doc/functional-testing.tex
@@ -100,17 +100,56 @@ In order to identify equivalence classes (ECs), the following strategy was used:
 		\item{EC-18: $2099 < YYYY$}
 	\end{itemize}
 
+\newpage
 \section{Test Cases}
 \subsection{Test Cases from Equivalence Classes}
 In order to identify test cases (TCs) from ECs, the following strategy is used: For each EC with valid input that has not been covered by a TC, write a TC covering as many uncovered ECs as possible. Then, for each EC with invalid input that has been covered, write a new TC that covers only that EC.
 
 \subsubsection{Test Cases for ECs with Valid Input}
 Valid Input ECs: EC-01, EC-04, EC-07, EC-10, EC-13, EC-16
-	
 
+\begin{table}[!htb]
+\centering
+\begin{tabular}{|l|l|l|l|l|l|l|l|}
+\hline
+TC \# & TC         & EC-01      & EC-04      & EC-07      & EC-10      & EC-13      & EC-16      \\ \hline
+01   & 01/02/1999 & \checkmark & \checkmark &            &            &            & \checkmark \\ \hline
+02   & 01/02/2000 & \checkmark &            & \checkmark &            &            & \checkmark \\ \hline
+03   & 01/04/2000 & \checkmark &            &            & \checkmark &            & \checkmark \\ \hline
+04   & 01/01/2000 & \checkmark &            &            &            & \checkmark & \checkmark \\ \hline
+\end{tabular}
+\end{table}
+	
 \subsubsection{Test Cases for ECs with Invalid Input}
 Invalid Input ECs: EC-02, EC-03, EC-05, EC-06, EC-08, EC-09, EC-11, EC-12, EC-14 EC-15, EC-17, EC-18
 
+\begin{table}[!htb]
+\centering
+\begin{tabular}{|l|l|l|l|l|l|l|l|}
+\hline
+TC \# & TC         & EC-02      & EC-03      & EC-05      & EC-06      & EC-08      & EC-09      \\ \hline
+05    & 01/00/2000 & \checkmark &            &            &            &            &            \\ \hline
+06    & 01/13/2000 &            & \checkmark &            &            &            &            \\ \hline
+07    & 00/02/1999 &            &            & \checkmark &            &            &            \\ \hline
+08    & 29/02/1999 &            &            &            & \checkmark &            &            \\ \hline
+09    & 00/02/2000 &            &            &            &            & \checkmark &            \\ \hline
+10    & 30/02/2000 &            &            &            &            &            & \checkmark \\ \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[!htb]
+\centering
+\begin{tabular}{|l|l|l|l|l|l|l|l|}
+\hline
+TC \# & TC         & EC-11      & EC-12      & EC-14      & EC-15      & EC-17      & EC-18      \\ \hline
+11    & 00/04/2000 & \checkmark &            &            &            &            &            \\ \hline
+12    & 31/04/2000 &            & \checkmark &            &            &            &            \\ \hline
+13    & 00/01/2000 &            &            & \checkmark &            &            &            \\ \hline
+14    & 32/01/2000 &            &            &            & \checkmark &            &            \\ \hline
+15    & 01/01/1899 &            &            &            &            & \checkmark &            \\ \hline
+16    & 01/01/2100 &            &            &            &            &            & \checkmark \\ \hline
+\end{tabular}
+\end{table}
 
 \subsection{Test Cases for Boundary Value Analysis}
 \subsection{Test Cases for Random Testing}
