--- a/doc/functional-testing.tex
+++ b/doc/functional-testing.tex
@@ -52,7 +52,7 @@
 \maketitle
 
 \section{Input Domain}
-The input domain of the unit \texttt{nextDate} consists of dates formatted as follows: $DD/MM/YYYY$. For months, $MM$, the input condition specifies the range $[1, 12]$. If $MM = 2$ and the year is not a leap year, then the input condition range for dates, $DD$ is $[1, 28]$ (a year is a leap year if divisible by 4 and not divisible by 100 (unless divisible by 400)). If $MM = 2$  and the year is a leap year, then the input condition range for $DD$ is $[1, 29]$. If $MM = 4, 6, 9,$ or $11$, then the input condition range for $DD$ is $[1, 30]$. If $MM = 1, 3, 5, 7, 8, 10,$ or $12$, then the input condition range for $DD$ is $[1, 31]$.
+The input domain of the unit \texttt{nextDate} consists of dates formatted as follows: $MM/DD/YYYY$. For months, $MM$, the input condition specifies the range $[1, 12]$. If $MM = 2$ and the year is not a leap year, then the input condition range for dates, $DD$ is $[1, 28]$ (a year is a leap year if divisible by 4 and not divisible by 100 (unless divisible by 400)). If $MM = 2$  and the year is a leap year, then the input condition range for $DD$ is $[1, 29]$. If $MM = 4, 6, 9,$ or $11$, then the input condition range for $DD$ is $[1, 30]$. If $MM = 1, 3, 5, 7, 8, 10,$ or $12$, then the input condition range for $DD$ is $[1, 31]$.
 
 \section{Equivalence Classes}
 In order to identify equivalence classes (ECs), the following strategy was used: input conditions typically specified a range $[a, b]$, thus one EC valid input was identified for $a \leq X \leq b$, and two others with invalid input were identified for $X < a$ and $b < X$.
@@ -113,9 +113,9 @@ Valid Input ECs: EC-01, EC-04, EC-07, EC-10, EC-13, EC-16
 \begin{tabular}{|l|l|l|l|l|l|l|l|}
 \hline
 TC \# & TC         & EC-01      & EC-04      & EC-07      & EC-10      & EC-13      & EC-16      \\ \hline
-01   & 01/02/1999 & \checkmark & \checkmark &            &            &            & \checkmark \\ \hline
-02   & 01/02/2000 & \checkmark &            & \checkmark &            &            & \checkmark \\ \hline
-03   & 01/04/2000 & \checkmark &            &            & \checkmark &            & \checkmark \\ \hline
+01   & 02/01/1999 & \checkmark & \checkmark &            &            &            & \checkmark \\ \hline
+02   & 02/01/2000 & \checkmark &            & \checkmark &            &            & \checkmark \\ \hline
+03   & 04/01/2000 & \checkmark &            &            & \checkmark &            & \checkmark \\ \hline
 04   & 01/01/2000 & \checkmark &            &            &            & \checkmark & \checkmark \\ \hline
 \end{tabular}
 \end{table}
@@ -128,12 +128,12 @@ Invalid Input ECs: EC-02, EC-03, EC-05, EC-06, EC-08, EC-09, EC-11, EC-12, EC-14
 \begin{tabular}{|l|l|l|l|l|l|l|l|}
 \hline
 TC \# & TC         & EC-02      & EC-03      & EC-05      & EC-06      & EC-08      & EC-09      \\ \hline
-05    & 01/00/2000 & \checkmark &            &            &            &            &            \\ \hline
-06    & 01/13/2000 &            & \checkmark &            &            &            &            \\ \hline
-07    & 00/02/1999 &            &            & \checkmark &            &            &            \\ \hline
-08    & 29/02/1999 &            &            &            & \checkmark &            &            \\ \hline
-09    & 00/02/2000 &            &            &            &            & \checkmark &            \\ \hline
-10    & 30/02/2000 &            &            &            &            &            & \checkmark \\ \hline
+05    & 00/01/2000 & \checkmark &            &            &            &            &            \\ \hline
+06    & 13/01/2000 &            & \checkmark &            &            &            &            \\ \hline
+07    & 02/00/1999 &            &            & \checkmark &            &            &            \\ \hline
+08    & 02/29/1999 &            &            &            & \checkmark &            &            \\ \hline
+09    & 02/00/2000 &            &            &            &            & \checkmark &            \\ \hline
+10    & 02/30/2000 &            &            &            &            &            & \checkmark \\ \hline
 \end{tabular}
 \end{table}
 
@@ -142,14 +142,15 @@ TC \# & TC         & EC-02      & EC-03      & EC-05      & EC-06      & EC-08  
 \begin{tabular}{|l|l|l|l|l|l|l|l|}
 \hline
 TC \# & TC         & EC-11      & EC-12      & EC-14      & EC-15      & EC-17      & EC-18      \\ \hline
-11    & 00/04/2000 & \checkmark &            &            &            &            &            \\ \hline
-12    & 31/04/2000 &            & \checkmark &            &            &            &            \\ \hline
-13    & 00/01/2000 &            &            & \checkmark &            &            &            \\ \hline
-14    & 32/01/2000 &            &            &            & \checkmark &            &            \\ \hline
+11    & 04/00/2000 & \checkmark &            &            &            &            &            \\ \hline
+12    & 04/31/2000 &            & \checkmark &            &            &            &            \\ \hline
+13    & 01/00/2000 &            &            & \checkmark &            &            &            \\ \hline
+14    & 01/32/2000 &            &            &            & \checkmark &            &            \\ \hline
 15    & 01/01/1899 &            &            &            &            & \checkmark &            \\ \hline
 16    & 01/01/2100 &            &            &            &            &            & \checkmark \\ \hline
 \end{tabular}
 \end{table}
+
 
 \subsection{Test Cases for Boundary Value Analysis}
 \subsection{Test Cases for Random Testing}
