--- a/doc/functional-testing.tex
+++ b/doc/functional-testing.tex
@@ -384,7 +384,7 @@ TC & Test Value & Expected Result                                  \\ \hline
 \end{table}
 
 \subsection{Test Cases for Random Testing}
-Typically, in random testing, test inputs are randomly generated according to some operational profile. In this case, we generate 16 test cases using a random number generators via \texttt{random.org}. MM is limited to the range $[00, 13]$, DD $[00, 32]$, and YYYY $[1899, 2100]$.
+Typically, in random testing, test inputs are randomly generated according to some operational profile. In this case, we generate 16 test cases using a random number generator via \texttt{random.org}. MM is limited to the range $[00, 13]$, DD $[00, 32]$, and YYYY $[1899, 2100]$.
 
 \begin{table}[H]
 \begin{tabular}{|l|l|l|}
@@ -392,13 +392,13 @@ Typically, in random testing, test inputs are randomly generated according to so
 TC & Test Value & Expected Result                              \\ \hline
 01 & 13/15/2040 & ERROR: The month needs to be between 1 to 12 \\ \hline
 02 & 00/31/1909 & ERROR: The month needs to be between 1 to 12 \\ \hline
-03 & 06/08/2053 & 06/08/2053                                   \\ \hline
+03 & 06/08/2053 & 06/09/2053                                   \\ \hline
 04 & 01/05/1986 & 01/06/1986                                   \\ \hline
 05 & 04/23/1977 & 04/24/1977                                   \\ \hline
 06 & 13/10/2024 & ERROR: The month needs to be between 1 to 12 \\ \hline
 07 & 11/27/1955 & 11/28/1955                                   \\ \hline
 08 & 13/03/2084 & ERROR: The month needs to be between 1 to 12 \\ \hline
-09 & 11/08/2059 & 11/07/2059                                   \\ \hline
+09 & 11/08/2059 & 11/09/2059                                   \\ \hline
 10 & 12/04/1912 & 12/05/1912                                   \\ \hline
 11 & 11/14/1902 & 11/15/1902                                   \\ \hline
 12 & 10/15/1972 & 10/16/1972                                   \\ \hline
